Update main to output generated at 4488805

--- a/index.html
+++ b/index.html
@@ -197,7 +197,9 @@
           <em>A series of entertaining escapades</em>
         </li>
         <li>
-          <a href="/trains/stations"><strong>Railway station signs</strong></a>
+          <a href="/trains/stations/A"
+            ><strong>Railway station signs</strong></a
+          >
           <em>I take pictures of station signs</em>
         </li>
       </ul>
